RESOLVED FIXED 279829
REGRESSION(283662@main): Web Extensions display strings are being returned unlocalized
https://bugs.webkit.org/show_bug.cgi?id=279829
Summary REGRESSION(283662@main): Web Extensions display strings are being returned un...
Timothy Hatcher
Reported 2024-09-17 10:18:35 PDT
Attachments
Timothy Hatcher
Comment 1 2024-09-17 10:23:00 PDT
EWS
Comment 2 2024-09-17 12:02:42 PDT
Committed 283788@main (056cae6be886): <https://commits.webkit.org/283788@main> Reviewed commits have been landed. Closing PR #33777 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.