REGRESSION(283662@main): Web Extensions display strings are being returned unlocalized. https://webkit.org/b/279829 rdar://136106148

Reviewed by Brian Weinstein.

The regressed with https://commits.webkit.org/283662@main. We need to create the m_manifestJSON
object after localization so it has the localized strings.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionCocoa.mm:
(WebKit::WebExtension::parseManifest): Create m_manifestJSON after localization.
(WebKit::WebExtension::manifest): Moved localization steps to parseManifest().
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtension.mm:
(TestWebKitAPI::TEST(WKWebExtension, DisplayStringParsingWithLocalization)): Added.

Canonical link: https://commits.webkit.org/283788@main